[package]
name = "particles"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = "1.4"
image = "0.24"
anyhow = "1"
tobj = "2"
rand = "0.8.4"
rayon = "1.5.1"

[dependencies.wgpu]
version = "26.0.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
shaderc = "0.8"

[profile.release]
strip = "symbols"
